--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-principles-and-practice-of-modern-surgery_72658
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72658-h/images/cover.jpg
 creator:
   author:
     agent_name: Park, Roswell
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '43922'
     url: http://www.gutenberg.org/2009/agents/43922
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72658#The-principles-and-practice-of-modern-surgery
 gutenberg_issued: '2024-01-08'
 gutenberg_type: Text
 identifiers:
